--- a/api/build.gradle
+++ b/api/build.gradle
@@ -22,6 +22,7 @@ repositories {
 
 ext {
     springBootVersion = '2.7.14'
+    lombokVersion = '1.18.20'
 }
 
 dependencies {
@@ -29,8 +30,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly("org.projectlombok:lombok:${lombokVersion}")
+    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
 }
 
 test {
