--- a/microservices/product-service/build.gradle
+++ b/microservices/product-service/build.gradle
@@ -22,6 +22,8 @@ repositories {
 }
 
 dependencies {
+	implementation project(':api')
+	implementation project(':util')
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	compileOnly 'org.projectlombok:lombok'
