--- a/microservices/product-composite-service/build.gradle
+++ b/microservices/product-composite-service/build.gradle
@@ -17,11 +17,17 @@ configurations {
 	}
 }
 
+jar {
+	enabled = false
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
+	implementation project(':api')
+	implementation project(':util')
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	compileOnly 'org.projectlombok:lombok'
