--- a/microservices/product-service/src/main/resources/application.yml
+++ b/microservices/product-service/src/main/resources/application.yml
@@ -6,3 +6,11 @@ logging:
   level:
     root: INFO
     ru.aasmc: DEBUG
+
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+server:
+  port: 8080
