--- a/microservices/recommendation-service/src/main/resources/application.yml
+++ b/microservices/recommendation-service/src/main/resources/application.yml
@@ -5,3 +5,11 @@ logging:
   level:
     root: INFO
     ru.aasmc: DEBUG
+
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+server:
+  port: 8080
