--- a/api/build.gradle
+++ b/api/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springdoc:springdoc-openapi-common:1.7.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly("org.projectlombok:lombok:${lombokVersion}")
     annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
