--- a/microservices/product-service/src/main/resources/application.yml
+++ b/microservices/product-service/src/main/resources/application.yml
@@ -7,10 +7,20 @@ logging:
     root: INFO
     ru.aasmc: DEBUG
 
+spring:
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: product-db
+
 ---
 spring:
   config:
     activate:
       on-profile: docker
+  data:
+    mongodb:
+      host: mongodb
 server:
   port: 8080
