--- a/microservices/product-composite-service/build.gradle
+++ b/microservices/product-composite-service/build.gradle
@@ -17,6 +17,10 @@ configurations {
 	}
 }
 
+ext {
+	set('springCloudVersion', "2021.0.8")
+}
+
 jar {
 	enabled = false
 }
@@ -30,11 +34,20 @@ dependencies {
 	implementation project(':util')
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
+	implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka'
 	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.7.0'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.cloud:spring-cloud-stream::test-binder'
 	testImplementation 'io.projectreactor:reactor-test'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.named('test') {
