--- a/microservices/recommendation-service/build.gradle
+++ b/microservices/recommendation-service/build.gradle
@@ -17,6 +17,7 @@ jar {
 
 ext {
 	mapstructVersion = "1.5.5.Final"
+	springCloudVersion = "2021.0.8"
 }
 
 configurations {
@@ -34,7 +35,10 @@ dependencies {
 	implementation project(':util')
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+	implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
+	implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka'
+
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
@@ -48,6 +52,12 @@ dependencies {
 	testImplementation 'org.testcontainers:mongodb'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.named('test') {
