--- a/microservices/review-service/build.gradle
+++ b/microservices/review-service/build.gradle
@@ -17,6 +17,7 @@ jar {
 
 ext {
 	mapstructVersion = "1.5.5.Final"
+	springCloudVersion = "2021.0.8"
 }
 
 configurations {
@@ -35,6 +36,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
+	implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
@@ -49,6 +52,12 @@ dependencies {
 	testImplementation 'org.testcontainers:mysql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.named('test') {
