feat: implement service discovery

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,3 +119,14 @@ services:
           memory: 512m
         reservations:
           memory: 512m
+
+  eureka:
+    build: spring-cloud/eureka-server
+    deploy:
+      resources:
+        limits:
+          memory: 512m
+        reservations:
+          memory: 512m
+    ports:
+      - "8761:8761"
