--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -179,3 +179,14 @@ services:
       - "2181:2181"
     environment:
       - KAFKA_ADVERTISED_HOST_NAME=zookeeper
+
+  eureka:
+    build: spring-cloud/eureka-server
+    deploy:
+      resources:
+        limits:
+          memory: 512m
+        reservations:
+          memory: 512m
+    ports:
+      - "8761:8761"
