--- a/microservices/product-service/src/main/resources/application.yml
+++ b/microservices/product-service/src/main/resources/application.yml
@@ -3,7 +3,21 @@ server:
   error:
     include-message: always
 
+app.eureka-server: localhost
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://${app.eureka-server}:8761/eureka/
+    initial-instance-info-replication-interval-seconds: 5
+    registry-fetch-interval-seconds: 5
+  instance:
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 5
+
 spring:
+  application:
+    name: product
   data:
     mongodb:
       host: localhost
@@ -68,6 +82,9 @@ spring:
       kafka:
         binder:
           brokers: kafka
+
+app.eureka-server: eureka
+
 server:
   port: 8080
 
