--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -113,7 +113,7 @@ services:
         condition: service_started
 
   mongodb:
-    image: mongo:4.4.2
+    image: mongo:6.0.4
     deploy:
       resources:
         limits:
@@ -124,13 +124,13 @@ services:
       - "27017:27017"
     command: mongod
     healthcheck:
-      test: "mongo --eval 'db.stats().ok'"
+      test: "mongostat -n 1"
       interval: 5s
       timeout: 2s
       retries: 60
 
   mysql:
-    image: mysql:5.7.32
+    image: mysql:8.0.32
     deploy:
       resources:
         limits:
@@ -151,24 +151,27 @@ services:
       retries: 60
 
   kafka:
-    image: wurstmeister/kafka:2.12-2.5.0
+    image: confluentinc/cp-kafka:7.3.1
+    restart: always
     deploy:
       resources:
         limits:
-          memory: 512m
+          memory: 1024m
         reservations:
-          memory: 512m
+          memory: 1024m
     ports:
       - "9092:9092"
     environment:
-      - KAFKA_ADVERTISED_HOST_NAME=kafka
-      - KAFKA_ADVERTISED_PORT=9092
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_BROKER_ID=1
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
     depends_on:
       - zookeeper
 
   zookeeper:
-    image: wurstmeister/zookeeper:3.4.6
+    image: confluentinc/cp-zookeeper:7.3.1
+    restart: always
     deploy:
       resources:
         limits:
@@ -178,7 +181,7 @@ services:
     ports:
       - "2181:2181"
     environment:
-      - KAFKA_ADVERTISED_HOST_NAME=zookeeper
+      - ZOOKEEPER_CLIENT_PORT=2181
 
   eureka:
     build: spring-cloud/eureka-server
