--- a/docker-compose-partitions.yml
+++ b/docker-compose-partitions.yml
@@ -114,7 +114,7 @@ services:
         condition: service_healthy
 
   mongodb:
-    image: mongo:4.4.2
+    image: mongo:6.0.4
     deploy:
       resources:
         limits:
@@ -125,13 +125,13 @@ services:
       - "27017:27017"
     command: mongod
     healthcheck:
-      test: "mongo --eval 'db.stats().ok'"
+      test: "mongostat -n 1"
       interval: 5s
       timeout: 2s
       retries: 60
 
   mysql:
-    image: mysql:5.7.32
+    image: mysql:8.0.32
     deploy:
       resources:
         limits:
