--- a/util/build.gradle
+++ b/util/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+    id 'io.spring.dependency-management' version '1.1.0'
     id 'java'
 }
 
@@ -21,7 +21,7 @@ repositories {
 }
 
 ext {
-    springBootVersion = '2.7.14'
+    springBootVersion = '3.0.4'
     lombokVersion = '1.18.20'
 }
 
