--- a/spring-cloud/eureka-server/build.gradle
+++ b/spring-cloud/eureka-server/build.gradle
@@ -1,7 +1,7 @@
 plugins {
+    id 'org.springframework.boot' version '3.0.4'
+    id 'io.spring.dependency-management' version '1.1.0'
     id 'java'
-    id 'org.springframework.boot' version '2.7.14'
-    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'ru.aasmc.microservices.composite.product'
@@ -18,7 +18,7 @@ configurations {
 }
 
 ext {
-    set('springCloudVersion', "2021.0.8")
+    springCloudVersion = "2022.0.1"
 }
 
 jar {
