update review service to spring boot 3

--- a/microservices/recommendation-service/src/main/resources/application.yml
+++ b/microservices/recommendation-service/src/main/resources/application.yml
@@ -23,6 +23,8 @@ spring:
       database: recommendation-db
 
   cloud:
+    function:
+      definition: messageProcessor
     stream:
       default-binder: rabbit
       default.contentType: application/json
