feat: add spring cloud gateway

--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -100,8 +100,6 @@ services:
     build: microservices/product-composite-service
     environment:
       - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,kafka
-    ports:
-      - "8080:8080"
     deploy:
       resources:
         limits:
@@ -191,5 +189,16 @@ services:
           memory: 512m
         reservations:
           memory: 512m
+
+  gateway:
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    build: spring-cloud/gateway
+    deploy:
+      resources:
+        limits:
+          memory: 512m
+        reservations:
+          memory: 512m
     ports:
-      - "8761:8761"
+      - "8080:8080"
