--- a/docker-compose-partitions.yml
+++ b/docker-compose-partitions.yml
@@ -101,8 +101,6 @@ services:
     build: microservices/product-composite-service
     environment:
       - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned
-    ports:
-      - "8080:8080"
     deploy:
       resources:
         limits:
@@ -176,5 +174,16 @@ services:
           memory: 512m
         reservations:
           memory: 512m
+
+  gateway:
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    build: spring-cloud/gateway
+    deploy:
+      resources:
+        limits:
+          memory: 512m
+        reservations:
+          memory: 512m
     ports:
-      - "8761:8761"
+      - "8080:8080"
