--- a/spring-cloud/gateway/build.gradle
+++ b/spring-cloud/gateway/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'java'
 }
 
+
 group = 'ru.aasmc.springcloud'
 version = '1.0.0-SNAPSHOT'
 
@@ -11,10 +12,8 @@ java {
     sourceCompatibility = '17'
 }
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+repositories {
+    mavenCentral()
 }
 
 ext {
@@ -25,13 +24,10 @@ jar {
     enabled = false
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
-    implementation 'org.glassfish.jaxb:jaxb-runtime'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
