--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,6 +130,10 @@ services:
   gateway:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - SERVER_SSL_KEY_STORE=file:/keystore/edge-test.p12
+      - SERVER_SSL_KEY_STORE_PASSWORD=testtest
+    volumes:
+      - $PWD/keystore:/keystore
     build: spring-cloud/gateway
     deploy:
       resources:
@@ -138,4 +142,4 @@ services:
         reservations:
           memory: 512m
     ports:
-      - "8080:8080"
+      - "8443:8443"
