--- a/microservices/product-composite-service/src/main/resources/application.yml
+++ b/microservices/product-composite-service/src/main/resources/application.yml
@@ -3,7 +3,18 @@ springdoc:
   api-docs.path: /openapi/v3/api-docs
   packagesToScan: ru.aasmc.microservices.composite.product
   pathsToMatch: /**
+  cache:
+    disabled: true
 
+  swagger-ui:
+    oauth2-redirect-url: /swagger-ui/oauth2-redirect.html
+    oauth:
+      clientId: writer
+      clientSecret: secret-writer
+      useBasicAuthenticationWithAccessCodeGrant: true
+  oAuthFlow:
+    authorizationUrl: https://localhost:8443/oauth2/authorize
+    tokenUrl: https://localhost:8443/oauth2/token
 
 api:
 
@@ -112,6 +123,7 @@ spring.rabbitmq:
   username: guest
   password: guest
 
+
 logging:
   level:
     root: INFO
@@ -120,6 +132,12 @@ logging:
 management.endpoint.health.show-details: "ALWAYS"
 management.endpoints.web.exposure.include: "*"
 server.forward-headers-strategy: framework
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://${app.auth-server}:9999
 ---
 spring.config.activate.on-profile: docker
 
