--- a/spring-cloud/authorization-server/build.gradle
+++ b/spring-cloud/authorization-server/build.gradle
@@ -4,13 +4,9 @@ plugins {
     id 'java'
 }
 
-
 group = 'ru.aasmc.springcloud'
 version = '1.0.0-SNAPSHOT'
-
-java {
-    sourceCompatibility = '17'
-}
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
@@ -25,13 +21,15 @@ jar {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
-    implementation 'org.springframework.security:spring-security-oauth2-jose'
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation "org.springframework.security:spring-security-oauth2-authorization-server:1.0.0"
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'net.sourceforge.htmlunit:htmlunit'
 }
 
 dependencyManagement {
