--- a/microservices/product-composite-service/build.gradle
+++ b/microservices/product-composite-service/build.gradle
@@ -26,6 +26,10 @@ jar {
 	enabled = false
 }
 
+springBoot {
+	buildInfo()
+}
+
 repositories {
 	mavenCentral()
 }
@@ -43,6 +47,9 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.0.2'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+	implementation 'io.micrometer:micrometer-tracing-bridge-otel'
+	implementation 'io.opentelemetry:opentelemetry-exporter-zipkin'
 	implementation 'org.springframework.retry:spring-retry'
 	implementation "io.github.resilience4j:resilience4j-spring-boot3:${resilience4jVersion}"
 	implementation "io.github.resilience4j:resilience4j-reactor:${resilience4jVersion}"
