--- a/spring-cloud/eureka-server/build.gradle
+++ b/spring-cloud/eureka-server/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.retry:spring-retry'
     implementation 'org.glassfish.jaxb:jaxb-runtime'
+    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
+    implementation 'io.opentelemetry:opentelemetry-exporter-zipkin'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
